@@ -11,6 +11,7 @@ from copy import copy as cpy
 import heapq
 import numpy as np
 from graphviz import Graph
+from itertools import permutations
 import networkx as nx
 import gurobipy as gp
 import BDD as DD
@@ -81,6 +82,72 @@ class DegreeKeeper:
     def has_freedom(self, key):
         """Checks whether a node can be further covered."""
         return key in self.index.keys()
+
+
+class ColorSorter:
+    """Sorts color blocks (to derive a good var order for the color BDD)."""
+    def __init__(self, f_colors, node_order):
+        self.f_colors = f_colors
+        self.node_order = node_order
+        self.no_colors = len(np.unique(f_colors))
+        self.pos = {node_order[i]: i for i in range(len(node_order))}
+
+    def rel_weight(self, elements_in_A, elements_in_B):
+        """Calculates a 'relative weight' of the color.
+
+        Args:
+            elements_in_A (list): elements with color A,
+            elements_in_B (list): elements with color B.
+        Returns:
+            RW (int): 'relative weight' of color A (relative to B)
+
+        Notes:
+            In fact, if RW > 0, then configuration (A,B) will have fewer
+            inverstions with `node_order` (and the other way around if
+            `RW` < 0).
+        """
+        RW = 0
+        for a in elements_in_A:
+            for b in elements_in_B:
+                if self.pos[a] > self.pos[b]:
+                    RW += 1
+                elif self.pos[a] < self.pos[b]:
+                    RW -= 1
+        return RW
+
+    def sort_colors(self):
+        """Sorts color blocks and nodes within each color.
+
+        The aim is to have the minimum number of inversions between the resulting
+        coloring diagram and the `node_order` parameter.
+
+        Returns:
+            colors (list): ordered color numbers.
+            customers (dict): (ordered) list of customer per color.
+        """
+        colors = [set([idx+1 for idx, color in enumerate(self.f_colors)
+                       if color == c]) for c in range(self.no_colors)]
+        col_idx = list(range(len(colors)))
+
+        while changed:
+            for i in range(self.no_colors-1):
+                for j in range(i, self.no_colors):
+                    if self.rel_weight(colors[i], colors[j]) > 0:
+                        c = cpy(colors[i])
+                        colors[i] = cpy(colors[j])
+                        colors[j] = c
+
+                        c = col_idx[i]
+                        col_idx[i] = col_idx[j]
+                        col_idx[j] = c
+                        break
+
+        customers = {c: [] for c in range(self.no_colors)}
+
+        for j in self.node_order:
+            customers[self.f_colors[j-1]].append(j)
+
+        return col_idx, customers
 
 
 def build_cover_DD(S, f):  # pylint: disable=too-many-locals,invalid-name
@@ -207,7 +274,7 @@ def build_cover_DD(S, f):  # pylint: disable=too-many-locals,invalid-name
     return B, node_labels
 
 
-def build_color_DD(f, f_color, k_bar):  # pylint: disable=invalid-name
+def build_color_DD(f, f_color, k_bar, preferred_order=None):  # pylint: disable=invalid-name
     """Builds a BDD encoding location-level constraints.
 
     Deals with no. locations per color and location costs.
@@ -216,6 +283,8 @@ def build_color_DD(f, f_color, k_bar):  # pylint: disable=invalid-name
         f (dict): location costs,
         colors (dict): color codes per facility
         k_bar (np.array): max. number of locations per color.
+        preferred_order (list): order of nodes to align to, as possible
+                                (e.g., the one of the already built cover DD)
 
     Returns:
         D (class BDD): resulting diagram.
@@ -232,11 +301,13 @@ def build_color_DD(f, f_color, k_bar):  # pylint: disable=invalid-name
     next_layer = {0: D.addnode(None)}
     trash_pipe = None
 
-    # TODO: here I'd need to decide the order of colors
-    #       and order of nodes within a color
-    colors = [c for c in range(len(k_bar))]
-    customers = [[C+1 for (C, f_c) in enumerate(f_color) if f_c == c]
-                 for c in colors]
+    if preferred_order is None:
+        colors = [c for c in range(len(k_bar))]
+        customers = [[C+1 for (C, f_c) in enumerate(f_color) if f_c == c]
+                    for c in colors]
+    else:
+        cs = ColorSorter(f_color, preferred_order)
+        colors, customers = cs.sort_colors()
 
     for c in colors:
         for customer in customers[c][:-1]:
@@ -483,7 +554,8 @@ def check_simple_example():
 def solve_with_BDD_MIP(S, f, fc, kb):
     """Sovles the problem by building a MIP from two BDDs."""
     cover_DD, cover_nl = build_cover_DD(S, f)
-    color_DD, color_nl = build_color_DD(f, fc, kb)
+    pref_order = [int(x[1:]) for x in cover_DD.vars]
+    color_DD, color_nl = build_color_DD(f, fc, kb, pref_order)
 
     m, c, v, x = UFL.add_BDD_to_MIP(cover_DD, prefix="cover")
     m, c, v, x = UFL.add_BDD_to_MIP(color_DD, m, x, "color")
@@ -502,8 +574,8 @@ def test_color_UFL():
     assert m_naive.objVal == m.objVal, f"Naive: {m_naive.objVal} (status {m_naive.status}), while BDD: {m.objVal} (status {m.status})"
 
 
-@pytest.mark.parametrize("test_inst", [generate_test_instance(25)
-                                       for _ in range(10)])
+@pytest.mark.parametrize("test_inst", [generate_test_instance(15)
+                                       for _ in range(100)])
 def test_random_UFL(test_inst):
     """Tests the formulation for color-UFL (overlap DD) -- random instance."""
     TOL=1e-3
@@ -528,7 +600,8 @@ def solve_with_align_BDD(S, f, fc, kb):
         m (class gurobipy.Model): the resulting model.
     """
     C, cover_nl = build_cover_DD(S, f)
-    A, color_nl = build_color_DD(f, fc, kb)
+    pref_order = [int(x[1:]) for x in C.vars]
+    A, color_nl = build_color_DD(f, fc, kb, pref_order)
 
 
     vs_A = vs.VarSeq(A.vars, [len(L) for L in A.layers[:-1]])
@@ -565,3 +638,97 @@ def test_triple(test_inst):
     print(f"BDD-NF model: status={m_NF.status}, obj={m_NF.objVal}")
     assert abs(m_naive.objVal - m_DD_MIP.objVal)<TOL, f"Naive: {m_naive.objVal} (status {m_naive.status}), while BDD: {m_DD_MIP.objVal} (status {m_DD_MIP.status})"
     assert abs(m_naive.objVal - m_NF.objVal)<TOL, f"Naive: {m_naive.objVal} (status {m_naive.status}), while BDD: {m_NF.objVal} (status {m_NF.status})"
+
+
+# Separate tesing code for ColorSorter
+
+def no_invs(order, blocks, target):
+    """Returns no. inversions b/w `blocks` in `order`, with the `target`.
+
+    Examples:
+        1) If I have a target of [1,2,3,4,5,6,7],
+        but [1,2,3], [4,5,6], and [7] have to be "glued"
+        in such blocks (numbered `0`, `1`, and `2`), then the order
+        (2,0,1) will imply the element order [7,1,2,3,4,5,6] and 6 inversions:
+
+        >>> no_invs((2,0,1), [[1,2,3], [4,5,6], [7]], [1,2,3,4,5,6,7])
+        6
+
+        Similarly,
+
+        >>> no_invs((0,2,1), [[1,2,3],[4,5,6],[7]], [1,2,3,4,5,6,7])
+        3
+
+    2) The order of variables within a block, of course, does not matter:
+    >>> no_invs((0,2,1), [[1,2,3],[6,5,4],[7]], [1,2,3,4,5,6,7])
+    3
+
+    """
+    no_invs = 0
+    pos = {target[i]: i for i in list(range(len(target)))}
+
+    for first in range(len(order)-1):
+        for second in range(first+1, len(order)):
+            for a in blocks[order[first]]:
+                for b in blocks[order[second]]:
+                    if pos[a] > pos[b]:
+                        no_invs += 1
+
+    return no_invs
+
+
+def bruteforce_correct_order(f_color, target_order):
+    """Calculates the correct order with bruteforce."""
+    min_inv = len(target_order)**2 + 1  # cannot be more than this
+    best_order = None
+    no_colors = len(np.unique(f_color))
+
+    colors = [[] for c in range(no_colors)]
+    for e in target_order:
+        colors[f_color[e-1]].append(e)
+
+    for order in permutations(list(range(len(colors)))):
+        invs = no_invs(order, colors, target_order)
+        if invs < min_inv:
+            min_inv = invs
+            best_order = order
+
+    customers = {c: [] for c in best_order}
+
+    for e in target_order:
+        customers[f_color[e-1]].append(e)
+
+    return sum([customers[c] for c in best_order], [])
+
+def find_correct_order(f_color, target_order):
+    """Finds the correct order with the code above."""
+
+    cs = ColorSorter(f_color, target_order);
+    colors, customers = cs.sort_colors()
+
+    return sum([customers[c] for c in colors], [])
+
+def make_instance(n):
+    """Makes a quick test instance for ColorSorter"""
+    S, f, f_colors, k_bar = generate_test_instance(n)
+    target_order = np.random.permutation(list(range(1,len(f_colors)+1)))
+    return (f_colors, target_order)
+
+def get_score(A, target):
+    """Calculates no. of inversions between `A` and `target`"""
+    pos = {target[i]: i for i in list(range(len(target)))}
+    invs = 0
+    for i in range(len(A)-1):
+        for j in range(i, len(A)):
+            if pos[A[i]] > pos[A[j]]:
+                invs += 1
+    return invs
+
+@pytest.mark.parametrize("test_inst", [make_instance(15)
+                                       for _ in range(10)])
+def test_ColorSorter(test_inst):
+    """Tests that ColorSorter finds an optimal order (compares to bruteforce)."""
+    f_colors, target_order = test_inst
+    print(f"The instance is: f_colors={f_colors}, target={target_order}")
+    assert get_score(find_correct_order(f_colors, target_order), target_order) == get_score(
+        bruteforce_correct_order(f_colors, target_order), target_order)
